--- a/index.html
+++ b/index.html
@@ -14,52 +14,265 @@
 </head>
 <body>
 
-		<nav class="navbar navbar-default">
+  <header>
+		<nav class="navbar navbar-inverse navbar-static-top">
 			<div class="container">
-				<!-- Header del Menu en dispositivos moviles -->
+
+				<!-- Encabezado del menú -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
-						<span class="sr-only">Alternar Menu</span>
+					<a href="#" class="navbar-brand">e- commerce</a>
+
+					<!-- Menú hamburguesa -->
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#btn-colapsar">
+						<span class="sr-only">Navegacion</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-
-					<!-- Brand / Nombre del sitio -->
-					<a href="#" class="navbar-brand">e-commerce-laboratoria</a>
 				</div>
 
-				<!-- Links del Menu -->
-				<div class="collapse navbar-collapse" id="navbar1">
+				<!-- Elementos del Menu -->
+				<!-- Links y formulario -->
+				<div class="collapse navbar-collapse" id="btn-colapsar">
+
+					<!-- Links del Menu -->
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Inicio</a></li>
-						<li><a href="#">Productos</a></li>
-
-						<!-- Submenu -->
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Productos <span class="caret"></span></a>
-
+						<li><a href="#">Inicio</a></li>
+						<li>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Productos <span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="#">Lorem ipsum.</a></li>
-								<li><a href="#">Lorem ipsum.</a></li>
-								<li class="divider"></li>
-								<li><a href="#">Lorem ipsum.</a></li>
+								<li><a href="#">Clasificación 1</a></li>
+								<li><a href="#">Clasificación 2</a></li>
+								<li><a href="#">Clasificación 3</a></li>
+								<li><a href="#">Clasificación 4</a></li>
+								<li><a href="#">Clasificación 5</a></li>
 							</ul>
 						</li>
+						<li><a href="#">Contacto</a></li>
 					</ul>
-						<!-- Formulario / Barra de Busqueda -->
-						<form action="" class="navbar-form navbar-left">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Buscar">
-								<button type="submit" class="btn btn-default">
-									Buscar
-								</button>
-							</div>
-						</form>
+
+					<!-- Formulario de Busqueda -->
+					<form class="navbar-form navbar-right" action="" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Buscar">
+							<button type="submit" class="btn btn-default">Buscar</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</nav>
-	</div>
+	</header>
+  <!-- Inicia la página -->
+  <section class="main">
+  <div class="container">
+    <!-- Carousel -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap-->
+          <!-- Indicadores de posicion -->
+          <ol class="carousel-indicators">
+            <li data-target="#slider" data-slide-to="0" class="active"></li>
+            <li data-target="#slider" data-slide-to="1"></li>
+            <li data-target="#slider" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Contenedor de Sliders -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="https://dummyimage.com/600x400/301/fff" alt="">
+            </div>
+
+            <div class="item">
+              <img src="https://dummyimage.com/600x400/643/fff" alt="">
+            </div>
+
+            <div class="item">
+              <img src="https://dummyimage.com/600x400/603/fff" alt="">
+            </div>
+          </div>
+
+          <!-- Controles -->
+          <a href="#slider" class="left carousel-control" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Anterior</span>
+          </a>
+          <a href="#slider" class="right carousel-control" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Siguiente</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row ">
+      <div class="col-md-12">
+        <div class="page-header">
+          <h1 class="text-center">Productos</h1>
+        </div>
+      </div>
+      <!-- Inicia la sección de imágenes fijas -->
+      <!-- Primera fila (en modo de escritorio 2 imágenes) -->
+      <div class="row ">
+        <div class="col-xs-12 col-sm-6 col-md-6 ">
+          <div class="thumbnail img1 img-responsive">
+            <a href="#">
+              <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
+            </a>
+            <div class="caption">
+              <h3>Imagen 1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="#" class="btn btn-default">Detalles</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="thumbnail img2">
+          <a href="#">
+            <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
+          </a>
+          <div class="caption">
+            <h3>Imágen 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+              <a href="#" class="btn btn-default">Detalles</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      </div>
+
+      <!-- Segunda fila (en modo de escritorio 2 imágenes) -->
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="thumbnail img3">
+            <a href="#">
+              <!-- <img src="https://dummyimage.com/600x400/a72/fff" alt=""> -->
+            </a>
+            <div class="caption ">
+              <h3>Imagen 1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="#" class="btn btn-default">Detalles</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="thumbnail img4">
+            <a href="#">
+              <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
+            </a>
+            <div class="caption ">
+              <h3>Imágen 2</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="#" class="btn btn-default">Detalles</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tercera fila  -->
+
+
+        <div class="col-xs-12 col-sm-6 col-md-12">
+          <div class="thumbnail img5">
+            <a href="#">
+            <!-- <img src="https://dummyimage.com/1000x200/aa2/fff" alt=""> -->
+            </a>
+          <div class="caption">
+            <h3>Imagen 5</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+              <a href="#" class="btn btn-default">Detalles</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+
+<!--Tercera fila (en modo de escritorio 4 imágenes)  -->
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+          </a>
+          <div class="caption">
+            <h3>Imágen 5</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+              <a href="#" class="btn btn-default">Detalles</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+          </a>
+          <div class="caption">
+            <h3>Imágen 6</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+              <a href="#" class="btn btn-default">Detalles</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+          </a>
+          <div class="caption">
+            <h3>Imágen 7</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+              <a href="#" class="btn btn-default">Detalles</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+          </a>
+          <div class="caption">
+            <h3>Imágen 8</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+              <a href="#" class="btn btn-default">Detalles</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
 
 
   <script src="js/app.js"></script>
