--- a/index.html
+++ b/index.html
@@ -64,111 +64,76 @@
 	</header>
   <!-- Inicia la página -->
   <section class="main">
-  <div class="container">
-    <!-- Carousel -->
-    <div class="row">
-      <div class="col-md-12">
-        <div class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap-->
-          <!-- Indicadores de posicion -->
-          <ol class="carousel-indicators">
-            <li data-target="#slider" data-slide-to="0" class="active"></li>
-            <li data-target="#slider" data-slide-to="1"></li>
-            <li data-target="#slider" data-slide-to="2"></li>
-          </ol>
+    <div class="container">
+      <!-- Carousel -->
+      <div class="row">
+        <div class="col-md-12">
+          <div id="slider" class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap-->
+            <!-- Indicadores de posicion -->
+            <ol class="carousel-indicators">
+              <li data-target="#slider" data-slide-to="0" class="active"></li>
+              <li data-target="#slider" data-slide-to="1"></li>
+              <li data-target="#slider" data-slide-to="2"></li>
+            </ol>
 
-          <!-- Contenedor de Sliders -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <img src="https://dummyimage.com/600x400/301/fff" alt="">
+            <!-- Contenedor de Sliders -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://dummyimage.com/600x400/301/fff" alt="">
+              </div>
+
+              <div class="item">
+                <img src="https://dummyimage.com/600x400/643/fff" alt="">
+              </div>
+
+              <div class="item">
+                <img src="https://dummyimage.com/600x400/603/fff" alt="">
+              </div>
             </div>
 
-            <div class="item">
-              <img src="https://dummyimage.com/600x400/643/fff" alt="">
-            </div>
+            <!-- Controles -->
+            <a href="#slider" class="left carousel-control" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Anterior</span>
+            </a>
+            <a href="#slider" class="right carousel-control" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Siguiente</span>
+            </a>
+          </div>
+        </div>
+      </div>
 
-            <div class="item">
-              <img src="https://dummyimage.com/600x400/603/fff" alt="">
+      <div class="row ">
+        <div class="col-md-12">
+          <div class="page-header">
+            <h1 class="text-center">Productos</h1>
+          </div>
+        </div>
+        <!-- Inicia la sección de imágenes fijas -->
+        <!-- Primera fila (en modo de escritorio 2 imágenes) -->
+        <div class="row ">
+          <div class="col-xs-12 col-sm-6 col-md-6 ">
+            <div class="thumbnail img1 img-responsive">
+              <a href="#">
+                <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
+              </a>
+              <div class="caption">
+                <h3>Imagen 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
             </div>
           </div>
-
-          <!-- Controles -->
-          <a href="#slider" class="left carousel-control" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Anterior</span>
-          </a>
-          <a href="#slider" class="right carousel-control" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Siguiente</span>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="row ">
-      <div class="col-md-12">
-        <div class="page-header">
-          <h1 class="text-center">Productos</h1>
-        </div>
-      </div>
-      <!-- Inicia la sección de imágenes fijas -->
-      <!-- Primera fila (en modo de escritorio 2 imágenes) -->
-      <div class="row ">
-        <div class="col-xs-12 col-sm-6 col-md-6 ">
-          <div class="thumbnail img1 img-responsive">
+          <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="thumbnail img2">
             <a href="#">
               <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
             </a>
             <div class="caption">
-              <h3>Imagen 1</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-                <a href="#" class="btn btn-default">Detalles</a>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6">
-        <div class="thumbnail img2">
-          <a href="#">
-            <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
-          </a>
-          <div class="caption">
-            <h3>Imágen 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-              <a href="#" class="btn btn-default">Detalles</a>
-            </p>
-          </div>
-        </div>
-      </div>
-      </div>
-
-      <!-- Segunda fila (en modo de escritorio 2 imágenes) -->
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6">
-          <div class="thumbnail img3">
-            <a href="#">
-              <!-- <img src="https://dummyimage.com/600x400/a72/fff" alt=""> -->
-            </a>
-            <div class="caption ">
-              <h3>Imagen 1</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-                <a href="#" class="btn btn-default">Detalles</a>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-6">
-          <div class="thumbnail img4">
-            <a href="#">
-              <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
-            </a>
-            <div class="caption ">
               <h3>Imágen 2</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <p>
@@ -178,95 +143,131 @@
             </div>
           </div>
         </div>
-      </div>
+        </div>
 
-      <!-- Tercera fila  -->
+        <!-- Segunda fila (en modo de escritorio 2 imágenes) -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="thumbnail img3">
+              <a href="#">
+                <!-- <img src="https://dummyimage.com/600x400/a72/fff" alt=""> -->
+              </a>
+              <div class="caption ">
+                <h3>Imagen 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
 
-
-        <div class="col-xs-12 col-sm-6 col-md-12">
-          <div class="thumbnail img5">
-            <a href="#">
-            <!-- <img src="https://dummyimage.com/1000x200/aa2/fff" alt=""> -->
-            </a>
-          <div class="caption">
-            <h3>Imagen 5</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-              <a href="#" class="btn btn-default">Detalles</a>
-            </p>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="thumbnail img4">
+              <a href="#">
+                <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
+              </a>
+              <div class="caption ">
+                <h3>Imágen 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-
-<!--Tercera fila (en modo de escritorio 4 imágenes)  -->
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
-          </a>
-          <div class="caption">
-            <h3>Imágen 5</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-              <a href="#" class="btn btn-default">Detalles</a>
-            </p>
+        <!-- Tercera fila (en modo escritorio 1 imágen) -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-12">
+            <div class="thumbnail img5">
+              <a href="#">
+              <!-- <img src="https://dummyimage.com/1000x200/aa2/fff" alt=""> -->
+              </a>
+              <div class="caption">
+                <h3>Imagen 5</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
-          </a>
-          <div class="caption">
-            <h3>Imágen 6</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-              <a href="#" class="btn btn-default">Detalles</a>
-            </p>
+        <!--Cuarta fila (en modo de escritorio 4 imágenes)  -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <a href="#">
+                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+              </a>
+              <div class="caption">
+                <h3>Imágen 5</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
-          </a>
-          <div class="caption">
-            <h3>Imágen 7</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-              <a href="#" class="btn btn-default">Detalles</a>
-            </p>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <a href="#">
+                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+              </a>
+              <div class="caption">
+                <h3>Imágen 6</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="https://dummyimage.com/600x400/52b/fff" alt="">
-          </a>
-          <div class="caption">
-            <h3>Imágen 8</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-              <a href="#" class="btn btn-default">Detalles</a>
-            </p>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <a href="#">
+                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+              </a>
+              <div class="caption">
+                <h3>Imágen 7</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <a href="#">
+                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+              </a>
+              <div class="caption">
+                <h3>Imágen 8</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
 
