--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="icon" href="assets/icon/card.png">
 	<link rel="stylesheet" href="css/main.css">
+  <link rel="icon" href="assets/icon/store_icon.png">
   <title>E-commerce L A B O R A T O R I A </title>
 </head>
 <body>
@@ -61,7 +62,7 @@
 				</div>
 			</div>
 		</nav>
-	</header>
+  </header>
   <!-- Inicia la página -->
   <section class="main">
     <div class="container">
@@ -182,7 +183,7 @@
 
         <!-- Tercera fila (en modo escritorio 1 imágen) -->
         <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-12">
+          <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="thumbnail img5">
               <a href="#">
               <!-- <img src="https://dummyimage.com/1000x200/aa2/fff" alt=""> -->
