--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 					<!-- Formulario de Busqueda -->
 					<form class="navbar-form navbar-right" action="" role="search">
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Buscar">
-							<button type="submit" class="btn btn-default">Buscar</button>
+							<input type="text" class="form-control" id="search" placeholder="Buscar">
+							<button type="submit" class="btn btn-default" id="btn-search">Buscar</button>
               <a class="nav-link fa-2x" href="#">
                 <i class="fas fa-shopping-cart"></i> <!--Imágen del carrito-->
                 <span id="counterItems" class="badge badge-info">0</span><!--Contador-->
@@ -127,7 +127,7 @@
                 <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
               </a>
               <div class="caption">
-                <h3>Imagen 1</h3>
+                <h3 id="name0"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -142,7 +142,7 @@
               <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
             </a>
             <div class="caption">
-              <h3>Imágen 2</h3>
+              <h3 id="name1"></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <p>
                 <a href="#" class="btn btn-primary">Comprar</a>
@@ -161,7 +161,7 @@
                 <!-- <img src="https://dummyimage.com/600x400/a72/fff" alt=""> -->
               </a>
               <div class="caption ">
-                <h3>Imagen 1</h3>
+                <h3 id="name2"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -177,7 +177,7 @@
                 <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
               </a>
               <div class="caption ">
-                <h3>Imágen 2</h3>
+                <h3 id="name3"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -196,7 +196,7 @@
               <!-- <img src="https://dummyimage.com/1000x200/aa2/fff" alt=""> -->
               </a>
               <div class="caption">
-                <h3>Imagen 5</h3>
+                <h3 id="name4"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -215,7 +215,7 @@
                 <img src="https://dummyimage.com/600x400/52b/fff" alt="">
               </a>
               <div class="caption">
-                <h3>Imágen 5</h3>
+                <h3 id="name5"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -231,7 +231,7 @@
                 <img src="https://dummyimage.com/600x400/52b/fff" alt="">
               </a>
               <div class="caption">
-                <h3>Imágen 6</h3>
+                <h3 id="name6"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -247,7 +247,7 @@
                 <img src="https://dummyimage.com/600x400/52b/fff" alt="">
               </a>
               <div class="caption">
-                <h3>Imágen 7</h3>
+                <h3 id="name7"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -263,7 +263,7 @@
                 <img src="https://dummyimage.com/600x400/52b/fff" alt="">
               </a>
               <div class="caption">
-                <h3>Imágen 8</h3>
+                <h3 id="name8"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -283,9 +283,11 @@
 
 
 
-  <script src="js/app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="js/app.js"></script>
+
 </body>
 </html>
