--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<form class="navbar-form navbar-right" action="" role="search">
 						<div class="form-group">
 							<input type="text" class="form-control" id="search" placeholder="Buscar">
-							<button type="submit" class="btn btn-default" id="btn-search">Buscar</button>
+							<button type="submit" class="btn btn-default" id="btn-search" onclick="enter()">Buscar</button>
               <a class="nav-link fa-2x" href="#">
                 <i class="fas fa-shopping-cart"></i> <!--Imágen del carrito-->
                 <span id="counterItems" class="badge badge-info">0</span><!--Contador-->
