Pintando los precios

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               <div class="caption">
                 <h3 id="name0"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price0"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -140,6 +141,7 @@
             <div class="caption">
               <h3 id="name1"></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h2 id="price1"></h2>
               <p>
                 <a href="#" class="btn btn-primary">Comprar</a>
                 <a href="#" class="btn btn-default">Detalles</a>
@@ -159,6 +161,7 @@
               <div class="caption ">
                 <h3 id="name2"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price2"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -175,6 +178,7 @@
               <div class="caption ">
                 <h3 id="name3"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price3"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -194,6 +198,7 @@
               <div class="caption">
                 <h3 id="name4"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price4"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -213,6 +218,7 @@
               <div class="caption">
                 <h3 id="name5"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price5"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -229,6 +235,7 @@
               <div class="caption">
                 <h3 id="name6"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price6"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -245,6 +252,7 @@
               <div class="caption">
                 <h3 id="name7"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price7"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -261,6 +269,7 @@
               <div class="caption">
                 <h3 id="name8"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price8"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -272,12 +281,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
-
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
