--- a/index.html
+++ b/index.html
@@ -70,7 +70,159 @@
   </header>
   <!-- Inicia la página -->
   <section class="main">
-    <div class="container">
+    <div class="container-fluid" id="principal">
+      <!-- Carousel -->
+      <div class="row">
+        <div class="col-md-12">
+          <div id="slider" class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap-->
+            <!-- Indicadores de posicion -->
+            <ol class="carousel-indicators">
+              <li data-target="#slider" data-slide-to="0" class="active"></li>
+              <li data-target="#slider" data-slide-to="1"></li>
+              <li data-target="#slider" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Contenedor de Sliders -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="./assets/images/sports.jpg" alt="computer">
+              </div>
+
+              <div class="item">
+                <img src="./assets/images/kitchen.jpg" alt="kitchen">
+              </div>
+
+              <div class="item">
+                <img src="./assets/images/domestic.png" alt="domestic products">
+              </div>
+
+            <div class="item">
+              <img src="./assets/images/tech.jpg" alt="technology">
+            </div>
+
+            <div class="item">
+              <img src="./assets/images/phones.jpg" alt="phones">
+            </div>
+
+            <div class="item">
+              <img src="./assets/images/photo.jpg" alt="photo">
+            </div>
+
+          <div class="item">
+            <img src="./assets/images/gadgetsforgeeks.jpg" alt="gadgets">
+          </div>
+
+          <div class="item">
+            <img src="./assets/images/house.jpg" alt="house">
+          </div>
+</div>
+            <!-- Controles -->
+            <a href="#slider" class="left carousel-control" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Anterior</span>
+            </a>
+            <a href="#slider" class="right carousel-control" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Siguiente</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row ">
+        <div class="col-md-12">
+          <div class="page-header">
+            <h1 class="text-center">Productos</h1>
+          </div>
+        </div>
+        <!-- Inicia la sección de imágenes fijas -->
+        <!-- Primera fila (en modo de escritorio 2 imágenes) -->
+        <div class="row ">
+          <div class="col-xs-12 col-sm-6 col-md-6 ">
+            <div class="thumbnail img0 img-responsive" id="div0">
+              <h3 id="name0"></h3>
+              <div class="caption" id="cont0">
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="thumbnail img0 img-responsive" id="div1">
+              <h3 id="name1"></h3>
+              <div class="caption" id="cont1">
+              </div>
+            </div>
+        </div>
+        </div>
+
+        <!-- Segunda fila (en modo de escritorio 2 imágenes) -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="thumbnail img0 img-responsive" id="div2">
+              <h3 id="name2"></h3>
+              <div class="caption" id="cont2">
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="thumbnail img0 img-responsive" id="div3">
+              <h3 id="name3"></h3>
+                <div class="caption" id="cont3">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <!-- Tercera fila (en modo escritorio 1 imágen) -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="thumbnail img0 img-responsive" id="div4">
+              <h3 id="name4"></h3>
+                <div class="caption" id="cont4">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <!--Cuarta fila (en modo de escritorio 4 imágenes)  -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail  img0 img-responsive" id="div5">
+              <h3 id="name5"></h3>
+                <div class="caption" id="cont5">
+                </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail img0 img-responsive" id="div6">
+              <h3 id="name6"></h3>
+                <div class="caption" id="cont6">
+                </div>
+              </div>
+            </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail img0 img-responsive" id="div7">
+              <h3 id="name7"></h3>
+
+                <div class="caption" id="cont7">
+                </div>
+              </div>
+            </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail img0 img-responsive" id="div8">
+              <h3 id="name8"></h3>
+                <div class="caption" id="cont8">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container hidden">
       <!-- Carousel -->
       <!-- <div class="row">
         <div class="col-md-12">
