--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
       </div>
     </div>
-    <div class="container hidden">
+    <div class="container ">
       <!-- Carousel -->
       <!-- <div class="row">
         <div class="col-md-12">
