--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 							</ul>
 						</li>
 						<li><a href="#">Contacto</a></li>
-					</ul>
+          </ul>
+          <button class="btn btn-md btn-default" id="login-google" type="submit">Inicia sesión con Google</button>
 					<!-- Formulario de Busqueda -->
 
 					<form class="navbar-form navbar-right" action="" role="search" id="search-product">
@@ -226,7 +227,7 @@
       <!-- Carousel -->
       <!-- <div class="row">
         <div class="col-md-12">
-          <div id="slider" class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap--> -->
+          <div id="slider" class="carousel slide" data-ride="carousel">Estas clases son propias de bootstrap
             <!-- Indicadores de posicion -->
             <!-- <ol class="carousel-indicators">
               <li data-target="#slider" data-slide-to="0" class="active"></li>
@@ -574,6 +575,14 @@
       </div>
     </div>
   </section>
+
+  <!-- SCRIPTS FIREBASE -->
+  <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-messaging.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
