--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						</li>
 						<li><a href="#">Contacto</a></li>
           </ul>
-          <button class="btn btn-md btn-default" id="login-google" type="submit">Inicia sesión con Google</button>
+          <button class="btn btn-md btn-default" id="login-google" type="submit">Inicia sesión </button>
 					<!-- Formulario de Busqueda -->
 
 					<form class="navbar-form navbar-right" action="" role="search" id="search-product">
@@ -61,6 +61,10 @@
 
               <div class="dropdown">
                 <a class="dropdown-toggle fa-2x" data-toggle="dropdown">
+                  <div id="user-container">
+                      <span id="user-name"></span>
+                      <img id="user-photo" width="50px">
+                  </div>
                   <i class="fas fa-shopping-cart"></i> <!--Imágen del carrito-->
                   <span id="counterItems" class="badge badge-info">0</span>
                 </a>
