--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 						</li>
 						<li><a href="#">Contacto</a></li>
           </ul>
-          <button class="btn btn-md btn-default" id="login-google" type="submit">Inicia sesión </button>
+          <button class="btn btn-md btn-default navbar-right" id="login-google" type="submit">Inicia sesión </button>
 					<!-- Formulario de Busqueda -->
 
-					<form class="navbar-form navbar-right" action="" role="search" id="search-product">
+					<form class="navbar-form navbar-right hidden" action="" role="search" id="search-product">
 						<div class="form-group">
 							<input type="text" class="form-control" id="search" placeholder="Buscar">
 							<button type="submit" class="btn btn-default" id="btn-search">Buscar</button>
