buscador de categorias funcional

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Productos <span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="#">Clasificación 1</a></li>
-								<li><a href="#">Clasificación 2</a></li>
-								<li><a href="#">Clasificación 3</a></li>
-								<li><a href="#">Clasificación 4</a></li>
-								<li><a href="#">Clasificación 5</a></li>
+								<li class="category"><a href="#">Celulares y Smartphones</a></li>
+								<li class="category"><a href="#">Deportes y Fitness</a></li>
+								<li class="category"><a href="#">Consolas y Videojuegos</a></li>
+								<li class="category"><a href="#">Electrodomésticos</a></li>
+								<li class="category"><a href="#">Electrónica, Audio y Video</a></li>
 							</ul>
 						</li>
 						<li><a href="#">Contacto</a></li>
