--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                      <a href="#" id="quit-cart" class="button u-full-width">Vaciar Carrito</a>
                    </li>
                    <li>
-                     Pagar
+                     <div id="paypal-button-container"></div>
                    </li>
                  </ul>
                </div>
